--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -1,32 +1,22 @@
 config:
+  credentials: []
   project_repos:
-    onedatasim:
-      repo: 'https://github.com/EOSC-synergy/onedataSim'
-      branch: ${GIT_LOCAL_BRANCH##*/} # I'd like to be a variable i.e GIT_BRANCH
+    github.com/EOSC-synergy/sqaaas-tooling:
+      branch: main
+      repo: https://github.com/EOSC-synergy/sqaaas-tooling
+environment:
+  JPL_KEEPGOING: true
 sqa_criteria:
-  qc_style:
+  QC.Sec:
     repos:
-      onedatasim:
-        container: onedatasim-testing
+      this_repo:
         commands:
-          # "Flake 8 is the wrapper which verifies pep8, pyflakes and circular complexity"
-          # "The error code of flake8 are E***, W*** used in pep8 and F*** and C9**"   
-          #  Alternative: hacking is a flake8' plug-in, based on OpenStack Style Guidlines, 
-          #               which are based on Google Python Style Guide.
-          #- flake8 /onedatasim-repo
-          - ls
-  qc_security:
+        - bandit --recursive .
+        container: qc.sec_sleepy-zucchini-ant
+  QC.Sty:
     repos:
-      onedatasim:
-        # preliminary check of security, only plain code without execution
-        container: onedatasim-testing
-        commands: 
-          #- bandit -r /onedatasim-repo
-          - ls
-#  qc_doc:
-#    repos:
-#      onedatasim:
-#        container: onedatasim-testing
-#        commands:
-#          - python setup.py build_sphinx
-timeout: 900
+      this_repo:
+        commands:
+        - pycodestyle .
+        container: qc.sty_gimpy-charcoal-oriole
+timeout: 600
