--- a/.sqa/docker-compose.yml
+++ b/.sqa/docker-compose.yml
@@ -1,43 +1,20 @@
-version: "3.6"
 services:
-  onedatasim-testing:
-    image: "indigodatacloud/ci-images:python3.6"
-    container_name: "onedatasim-testing"
+  qc.sec_sleepy-zucchini-ant:
+    command: sleep 6000000
+    image: secfigo/bandit
     volumes:
-     - type: bind
-       source: ./onedatasim
-       target: /onedatasim-repo
-    #command: sleep 3600
-  onedatasim-s0:
-    container_name: "onedatasim-s0"
+    - source: ./
+      target: /sqaaas-build
+      type: bind
+    working_dir: /sqaaas-build
+  qc.sty_gimpy-charcoal-oriole:
     build:
-      context: "."
-      dockerfile: "./Dockerfile"
-      args:
-        # docker-hub releases will not need tokens to build never more
-        # ONECLIENT_ACCESS_TOKEN_TO_BUILD: ${TOKEN_BUILD}
-        # ONECLIENT_PROVIDER_HOST_TO_BUILD: "https://mon01-tic.ciemat.es"
-        # but need a docker image, passed through argument (not by image param)
-        BASE_OS : "lagocollaboration/lago-corsika:77402-dev"
- #   #image: "lagoproject/onedatasim:latest" # image could be at DockerHub (under consideration)
-    command: sleep 900
-  onedatasim-s1:
-    container_name: "onedatasim-s1"
-    build:
-      context: "."
-      dockerfile: "./Dockerfile"
-      args:
-        # but need a docker image, passed through argument (not by image param)
-        BASE_OS : "centos:7"
- #   #image: "lagoproject/onedatasim:latest" # image could be at DockerHub (under consideration)
-    command: sleep 900
-#  onedatasim-s2:
-#    container_name: "onedatasim-s2"
-#    build:
-#      context: "."
-#      dockerfile: "./Dockerfile"
-#      args:
-#        # but need a docker image, passed through argument (not by image param)
-#        BASE_OS : "lagocollaboration/lago-geant:TAG"
-# #   #image: "lagoproject/onedatasim:latest" # image could be at DockerHub (under consideration)
-#    command: sleep 900
+      context: ./github.com/EOSC-synergy/sqaaas-tooling/QC.Sty/pycodestyle
+      dockerfile: Dockerfile
+    command: sleep 6000000
+    volumes:
+    - source: ./
+      target: /sqaaas-build
+      type: bind
+    working_dir: /sqaaas-build
+version: '3.7'
